# DamoclesAI

./: CMakeLists.txt  DamoclesAI.cpp  DamoclesAI.h  README.md  gitignore .gitignore
.github/: copilot-instructions.md
Data/: shakesphere.txt  shakesphere_vocab.txt  test.txt
src/: DamoclesAI.cpp  DamoclesAI.h  Encoder.cpp  Encoder.h  FileLoader.cpp  FileLoader.h  Vocabulary.cpp  Vocabulary.h  file.cpp  pch.h
